[gd_scene load_steps=13 format=3 uid="uid://2m2nhcxj7aaj"]

[ext_resource type="Script" path="res://Scripts/Editables2.gd" id="1_hop3w"]
[ext_resource type="PackedScene" uid="uid://bx3u6wb2xvxbr" path="res://Objetos/footer.tscn" id="2_phkqa"]
[ext_resource type="PackedScene" uid="uid://cmfny35vwsquf" path="res://Objetos/superior_buttons.tscn" id="3_io1hx"]
[ext_resource type="FontFile" uid="uid://b1talsa0wfwtk" path="res://fonts/j foundry - colby black.otf" id="3_nxvjh"]
[ext_resource type="StyleBox" uid="uid://cvs1pqpwwq2yk" path="res://themes/paneltheme.tres" id="4_umpuf"]
[ext_resource type="StyleBox" uid="uid://crjsh3ju8qnbb" path="res://themes/tab_button_normal.tres" id="5_jc2pn"]
[ext_resource type="StyleBox" uid="uid://c6udqam74tgpg" path="res://themes/tab_button_hover.tres" id="6_1qes6"]
[ext_resource type="Texture2D" uid="uid://chcl6h1t8i0ei" path="res://Sprites/GUI/btn_transpaente.png" id="6_nop83"]
[ext_resource type="Texture2D" uid="uid://mslmdufus0g4" path="res://Sprites/GUI/btn_transpaente_relleno.png" id="7_spkvv"]
[ext_resource type="StyleBox" uid="uid://b1otd43vx7fwu" path="res://themes/tab_button_pressed.tres" id="7_svmbd"]
[ext_resource type="FontFile" uid="uid://b0egmodgvdla" path="res://fonts/SassoonSansStd-Medium.otf" id="8_f0aod"]

[sub_resource type="LabelSettings" id="LabelSettings_w81va"]
font = ExtResource("8_f0aod")
font_size = 26

[node name="Editables" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hop3w")

[node name="Footer" parent="CanvasLayer/Control" instance=ExtResource("2_phkqa")]
layout_mode = 1

[node name="superiorButtons" parent="CanvasLayer/Control" instance=ExtResource("3_io1hx")]
layout_mode = 1

[node name="ButtonGDD" parent="CanvasLayer/Control/superiorButtons" index="1"]
visible = false

[node name="ButtonCurso" parent="CanvasLayer/Control/superiorButtons" index="2"]
visible = false

[node name="Label" parent="CanvasLayer/Control/superiorButtons/TextureRect" index="0"]
text = "Recursos Editables"

[node name="BtnPresencaciones" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03125
anchor_top = 0.206944
anchor_right = 0.449612
anchor_bottom = 0.277933
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_nxvjh")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_jc2pn")
theme_override_styles/hover = ExtResource("6_1qes6")
theme_override_styles/pressed = ExtResource("7_svmbd")
toggle_mode = true
button_pressed = true
text = "Presentaciones"
metadata/_edit_use_anchors_ = true

[node name="BtnEvaluaciones" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.457444
anchor_top = 0.206944
anchor_right = 0.875806
anchor_bottom = 0.277933
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_nxvjh")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_jc2pn")
theme_override_styles/hover = ExtResource("6_1qes6")
theme_override_styles/pressed = ExtResource("7_svmbd")
toggle_mode = true
button_pressed = true
text = "Presentaciones"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0321313
anchor_top = 0.276344
anchor_right = 0.973106
anchor_bottom = 0.862722
offset_top = -1.52588e-05
theme_override_styles/panel = ExtResource("4_umpuf")
metadata/_edit_use_anchors_ = true

[node name="Presentaciones" type="Control" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="HFlowContainer" parent="CanvasLayer/Control/Panel/Presentaciones"]
custom_minimum_size = Vector2(100, 64)
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.092
anchor_right = 0.966
anchor_bottom = 0.934
offset_left = 0.00799561
offset_top = 0.0399971
offset_right = -0.144043
offset_bottom = 0.0799866
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 75

[node name="ItemsEval" type="Control" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="HFlowContainer" parent="CanvasLayer/Control/Panel/ItemsEval"]
custom_minimum_size = Vector2(100, 64)
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.237
anchor_top = 0.092
anchor_right = 0.966
anchor_bottom = 0.934
offset_left = -0.454102
offset_top = 0.158314
offset_right = -0.49646
offset_bottom = 0.672485
theme_override_constants/h_separation = 132
theme_override_constants/v_separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.069
anchor_right = 0.193
anchor_bottom = 0.939
offset_left = 0.151999
offset_top = 0.126007
offset_right = -0.211975
offset_bottom = 7.52597

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "5°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton6" type="TextureButton" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_nop83")
texture_pressed = ExtResource("7_spkvv")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/TextureButton6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "6°Básico"
label_settings = SubResource("LabelSettings_w81va")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Control/BtnPresencaciones" to="CanvasLayer/Control" method="_on_btn_presencaciones_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BtnEvaluaciones" to="CanvasLayer/Control" method="_on_btn_evaluaciones_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton" to="CanvasLayer/Control" method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton2" to="CanvasLayer/Control" method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton3" to="CanvasLayer/Control" method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton4" to="CanvasLayer/Control" method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton5" to="CanvasLayer/Control" method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/TextureButton6" to="CanvasLayer/Control" method="_on_texture_button_6_pressed"]

[editable path="CanvasLayer/Control/superiorButtons"]
